--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "description": "Mini Project Express JS & MySQL",
   "version": "1.0.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.x.x",
     "debug": "~2.x.x",
     "express": "~4.x.x",
     "morgan": "~1.x.x"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
