--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon bin/www.js"
   },
   "dependencies": {
     "cookie-parser": "~1.x.x",
