--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "dependencies": {
     "cookie-parser": "~1.x.x",
     "debug": "~2.x.x",
+    "dotenv": "^16.0.3",
     "express": "~4.x.x",
-    "morgan": "~1.x.x"
+    "express-session": "^1.17.3",
+    "morgan": "~1.x.x",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "nanoid": "3.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
