Finish Basic Auth Milestone 2

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon bin/www.js"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "cookie-parser": "~1.x.x",
     "debug": "~2.x.x",
     "dotenv": "^16.0.3",
