--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "debug": "~2.x.x",
     "dotenv": "^16.0.3",
     "express": "~4.x.x",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.x.x",
     "mysql2": "^2.3.3",
-    "nanoid": "3.3.4"
+    "nanoid": "3.3.4",
+    "npm": "^8.19.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
